feat: 增加主页面，成长机制
